fixing nav on mobile

--- a/assets/scss/nav.scss
+++ b/assets/scss/nav.scss
@@ -1,26 +1,29 @@
 ---
 ---
-$NetSPIRed: #cf0a2c;
 #logo {
   width: 50px;
 }
 
 .n-navbar {
-  width: 0px;
+  width: 0;
   height: 100%;
   background: #333333;
   position: fixed;
-  top: 0px;
+  top: 0;
   float: left;
   overflow-y: hidden;
   overflow-x: hidden;
   font-family: "NetSPISegoe";
   color: white;
   font-size: 18px;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
   padding-top: 20px;
 }
+
+.n-navbar.animate {
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
 #topBar {
   background: white;
   padding: 10px;
@@ -56,41 +59,33 @@ $NetSPIRed: #cf0a2c;
   color: #3d3935;
 }
 
-.n-navbar.active {
-  width: 300px;
-  overflow-y: auto;
-}
-
-.link {}
-
 .link:hover {
   text-decoration: underline;
 }
 
-
+.n-navbar.active {
+  width: 300px;
+  overflow-y: auto;
+}
 /*When the nav bar is closed let content be full width*/
-
 .n-navbar+#contentContainer {
   width: calc(100%);
 }
-
-
 /*When the nav bar is open, restrict the width of the content container*/
-
 .n-navbar.active+#contentContainer {
   width: calc(100% - 300px);
 }
 
 .n-navbar ul {
-  -webkit-transition: .5s ease;
-  padding-left: 0px;
+  -webkit-transition: 0.5s ease;
+  padding-left: 0;
   width: 300px;
 }
 
 .n-navbar .n-nav-item {
   margin-left: -300px;
-  -webkit-transition: margin-left .5s ease, padding-left .5s ease;
-  transition: margin-left .5s ease, padding-left .5s ease;
+  -webkit-transition: margin-left 0.5s ease, padding-left 0.5s ease;
+  transition: margin-left 0.5s ease, padding-left 0.5s ease;
   padding-left: 25px;
   width: 275px;
 }
@@ -98,16 +93,16 @@ $NetSPIRed: #cf0a2c;
 .n-navbar .n-parent-nav-item {
   margin-left: -300px;
   padding-left: 25px;
-  -webkit-transition: margin-left .5s ease;
-  transition: margin-left .5s ease;
+  -webkit-transition: margin-left 0.5s ease;
+  transition: margin-left 0.5s ease;
 }
 
 .n-navbar.active .n-parent-nav-item {
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 .n-navbar.active .n-nav-item {
-  margin-left: 0px;
+  margin-left: 0;
   padding-left: 25px;
   width: 275px;
   background: rgba(207, 10, 44, 0);
@@ -171,7 +166,7 @@ img {
 }
 
 .n-navbar ul:first-child {
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 .n-nav-item a {
@@ -193,10 +188,11 @@ li {
 }
 
 .n-nav-icon span:nth-child(1) {
-  top: 0px;
+  top: 0;
 }
 
-.n-nav-icon span:nth-child(2), .n-nav-icon span:nth-child(3) {
+.n-nav-icon span:nth-child(2),
+.n-nav-icon span:nth-child(3) {
   top: 10px;
 }
 
@@ -206,13 +202,13 @@ li {
 
 .n-nav-icon.open span:nth-child(1) {
   top: 10px;
-  width: 0%;
+  width: 0;
   left: 50%;
 }
 
 .n-nav-icon.open span:nth-child(4) {
   top: 10px;
-  width: 0%;
+  width: 0;
   left: 50%;
 }
 
@@ -235,13 +231,16 @@ li {
   /*background: rgba(61, 57, 53, .7);*/
   z-index: 5000;
   margin-bottom: 10px;
-  left: 0px;
+  left: 0;
   border-radius: 5px;
   -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
   cursor: pointer;
+}
+
+.n-nav-icon.animate {
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
 }
 
 .n-nav-icon.active {
@@ -257,47 +256,52 @@ li {
   background: rgba(61, 57, 53, 1);
   border-radius: 9px;
   opacity: 1;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  -ms-filter:  "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   margin-top: 10px;
   margin-left: 9px;
   left: 0;
   -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease;
-  transition: .25s ease;
+}
+
+.n-nav-icon.animate span {
+  -webkit-transition: 0.25s ease;
+  transition: 0.25s ease;
 }
 
 .mobile {
   display: none;
-  height: 0px;
-  width: 0px;
+  height: 0;
+  width: 0;
 }
 
 .noscroll {
   overflow: hidden;
 }
-
 @media (max-width: 900px) {
   #topBar {
     text-align: right;
   }
 }
-
 @media (max-width: 700px) {
   .n-navbar.active {
     width: 100vw;
     overflow-y: auto;
   }
+
   .n-nav-icon.active {
     /*Pull it in a bit so the icon doesn't go over any scrollbar*/
     left: calc(85vw - 25px);
   }
+
   .n-nav-icon.active span {
     background: white;
   }
+
   .n-navbar li {
     font-size: 20px;
   }
+
   .n-nav-item {
     width: 400px !important;
     max-width: 95vw;
@@ -306,7 +310,8 @@ li {
   .n-navbar.active+#contentContainer {
     width: 100%;
   }
+
   .mobile {
-    display: block;
+    display: block !important;
   }
 }
